--- a/public/index.html
+++ b/public/index.html
@@ -1148,11 +1148,11 @@
                             <div class="form-group">
                                 <label>Número de Parcelas *</label>
                                 <input type="number" id="transacao-num-parcelas" min="2" max="12" value="2" 
-                                       oninput="sistema.atualizarResumoFinanceiro()">
+                                       oninput="sistema.atualizarParcelas()">
                             </div>
                             <div class="form-group">
                                 <label>Data da Primeira Parcela *</label>
-                                <input type="date" id="transacao-data-primeira-parcela">
+                                <input type="date" id="transacao-data-primeira-parcela" onchange="sistema.atualizarParcelas()">
                             </div>
                         </div>
                     </div>
@@ -1173,6 +1173,11 @@
                                 <span style="font-weight: 600;">Valor Restante:</span>
                                 <span id="resumo-valor-restante" style="font-weight: bold; color: #155724;">R$ 0,00</span>
                             </div>
+                        </div>
+                        <!-- Lista de parcelas gerada automaticamente -->
+                        <div id="parcelas-list" style="margin-top:12px; display: none;">
+                            <h5 style="margin: 8px 0 6px 0;">Parcelas</h5>
+                            <div id="parcelas-list-items" style="display:flex; flex-direction:column; gap:6px;"></div>
                         </div>
                     </div>
                 </div>
@@ -6296,6 +6301,33 @@ Obrigado pela confiança! 🙏`;
                 document.getElementById('resumo-valor-total').textContent = `R$ ${valorTotal.toFixed(2)}`;
                 document.getElementById('resumo-entrada').textContent = `R$ ${valorEntrada.toFixed(2)}`;
                 document.getElementById('resumo-valor-restante').textContent = `R$ ${Math.max(0, valorRestante).toFixed(2)}`;
+
+                // Calcular e exibir parcelas se parcelado estiver ativo
+                const parceladoCheckbox = document.getElementById('transacao-parcelado');
+                const numParcelasInput = document.getElementById('transacao-num-parcelas');
+                const dataPrimeiraParcela = document.getElementById('transacao-data-primeira-parcela');
+                const parcelasListDiv = document.getElementById('parcelas-list');
+                const parcelasListItems = document.getElementById('parcelas-list-items');
+
+                if (parceladoCheckbox?.checked && numParcelasInput && dataPrimeiraParcela?.value && valorRestante > 0) {
+                    const numParcelas = parseInt(numParcelasInput.value) || 1;
+                    const valorParcela = valorRestante / numParcelas;
+                    const dataPrimeira = new Date(dataPrimeiraParcela.value);
+
+                    let html = '';
+                    for (let i = 0; i < numParcelas; i++) {
+                        const dataVenc = new Date(dataPrimeira);
+                        dataVenc.setMonth(dataVenc.getMonth() + i);
+                        const dataFormatada = dataVenc.toLocaleDateString('pt-BR');
+                        html += `<div style="background: #ffffff; padding: 8px; border-radius: 4px; font-size: 13px; border-left: 3px solid #155724;">
+                            <strong>Parcela ${i + 1}/${numParcelas}</strong> - R$ ${valorParcela.toFixed(2)} - Vencimento: ${dataFormatada}
+                        </div>`;
+                    }
+                    parcelasListItems.innerHTML = html;
+                    parcelasListDiv.style.display = 'block';
+                } else {
+                    parcelasListDiv.style.display = 'none';
+                }
             }
 
             carregarCategoriasTransacao() {
@@ -6665,6 +6697,11 @@ Obrigado pela confiança! 🙏`;
                 } else {
                     camposParcelas.style.display = 'none';
                 }
+                this.atualizarResumoFinanceiro();
+            }
+
+            // Anexar listener ao alterar número de parcelas ou data da primeira parcela para atualizar preview
+            atualizarParcelas() {
                 this.atualizarResumoFinanceiro();
             }
 
